<resources>
    <string name="app_name">Paint Log</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!--  Main  -->
    <string name="main_topic">추천 주제</string>
    <string name="main_add_diary">새 일기</string>

    <!--  Diary  -->
    <string name="diary_title">제목</string>
    <string name="diary_content">내용</string>
    <string name="diary_tag">태그</string>
    <string name="diary_today_color">오늘의 색</string>
    <string name="diary_weather_now">지금의 날씨</string>
    <string name="diary_call_weather">날씨 불러오기</string>
    <string name="diary_cancel">취소</string>
    <string name="diary_save">저장</string>
    <string name="diary_update">수정</string>
    <string name="diary_delete">삭제</string>
    <string name="diary_desc_canvas">일기 작성 배경 화면</string>
    <string name="diary_desc_color">오늘의 색 추가</string>
    <string name="diary_desc_weather_btn">날씨 불러오기</string>
    <string name="diary_color_percent_10">10%</string>
    <string name="diary_color_percent_20">20%</string>
    <string name="diary_color_percent_30">30%</string>
    <string name="diary_color_percent_40">40%</string>
    <string name="diary_color_percent_50">50%</string>
    <string name="diary_color_percent_60">60%</string>
    <string name="diary_color_percent_70">70%</string>
    <string name="diary_color_percent_80">80%</string>
    <string name="diary_color_percent_90">90%</string>
    <string name="diary_color_percent_100">100%</string>

    <!--  Settings  -->
    <string name="setting_alarm_title">알람</string>
    <string name="setting_alarm_summary">설정된 시간에 일기 작성 알림을 보냅니다.</string>
    <string name="setting_hour">시</string>
    <string name="setting_minute">분</string>
    <string name="setting_sync_title">동기화</string>
    <string name="setting_sync_summary">마지막 동기화 시간: %s</string>
    <string name="setting_sync_summary_none">없음</string>
    <string name="setting_sync_description">Sync Button</string>
    <string name="network_setting_title">네트워크 설정</string>
    <string name="network_setting_summary">동기화 시 사용할 네트워크 설정</string>
    <string name="setting_kakao_login_description">카카오 로그인 버튼</string>
    <string name="setting_kakao_login_error">Api 서버 로그인 오류 (%s)</string>
    <string name="setting_kakao_logout_button">카카오 로그아웃</string>
    <string name="setting_unregist_text"><u>회원탈퇴하기</u></string>
    <string name="setting_unregist_confirm">정말 탈퇴하시겠습니까??\n동기화 되어있는 일기는 모두 지워집니다.</string>
    <string name="setting_unregist_error_retry">재접속 후 다시 시도 바랍니다.</string>
    <string name="setting_unregist_error">회원 탈퇴 오류 (%s)</string>
    <string name="setting_notify_dialog_title">알람 설정</string>
    <string name="setting_notify_dialog_summary">알람 기능을 사용하기 위해선 알림 설정이 필요합니다.\n알림 설정 화면으로 이동하시겠습니까?</string>
    <string name="setting_notify_disabled">설정에서 알림을 허용해주세요.</string>
    <string name="setting_notify_title">오늘의 일기</string>
    <string name="setting_notify_summary">오늘의 일기를 작성해주세요.</string>
    <string name="channel_notify_title">일기 작성 알림</string>
    <string name="channel_notify_summary">설정한 시간에 일기 작성 알림을 보냅니다.</string>

    <!-- Artwork -->
    <string name="artwork_count">총 %s건</string>
    <string name="artwork_no_data">생성된 작품이 없습니다.</string>

    <!-- Diary Search -->
    <string name="diary_search_none_data">저장된 일기가 없습니다.</string>
    <string name="diary_search_tag_all">전체</string>

    <!-- Week Diary -->
    <string name="week_monday">월</string>
    <string name="week_tuesday">화</string>
    <string name="week_wednesday">수</string>
    <string name="week_thursday">목</string>
    <string name="week_friday">금</string>
    <string name="week_saturday">토</string>
    <string name="week_sunday">일</string>
    <string name="week_color">한 주의 색</string>
    <string name="week_drawing">이번 주 그림은?</string>

    <!-- Drawing -->
    <string name="drawing_confirm">확인</string>
  
    <!-- Stats -->
    <string name="stats_color_title">%s월의 색</string>
    <string name="stats_weather_title">%s월의 날씨</string>
    <string name="stats_percent">%s%%</string>
</resources>