<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".view.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp">

        <View
            android:id="@+id/setting_alarm_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </View>

        <TextView
            android:id="@+id/setting_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_alarm_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setting_alarm_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_alarm_summary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/setting_alarm_title"
            app:layout_constraintTop_toBottomOf="@id/setting_alarm_title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_alarm_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/setting_sync_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_sync_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setting_sync_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_sync_summary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/setting_sync_title"
            app:layout_constraintTop_toBottomOf="@id/setting_sync_title" />

        <ImageButton
            android:id="@+id/setting_sync_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/setting_sync_description"
            android:padding="0dp"
            android:src="@drawable/bi_arrow_repeat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/setting_kakao_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/setting_kakao_login_description"
            android:padding="0dp"
            android:src="@drawable/kakao_login_medium_narrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/setting_kakao_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_kakao_logout_button"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/setting_unregist_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/setting_unregist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_unregist_text"
            android:textColor="@android:color/darker_gray"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>