<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/empty_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/empty_page"
        android:layout_marginTop="@dimen/diary_margin"
        android:layout_marginStart="@dimen/diary_margin"
        android:layout_marginEnd="@dimen/diary_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/color_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paint_red_selector"
        android:layout_marginTop="30dp"
        android:tooltipText="RED"
        app:layout_constraintTop_toTopOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.05"/>

    <ImageButton
        android:id="@+id/color_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paint_orange_selector"
        android:layout_marginTop="30dp"
        android:tooltipText="ORANGE"
        app:layout_constraintTop_toTopOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.35"/>

    <ImageButton
        android:id="@+id/color_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paint_yellow_selector"
        android:layout_marginTop="30dp"
        android:tooltipText="YELLOW"
        app:layout_constraintTop_toTopOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.65"/>

    <ImageButton
        android:id="@+id/color_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paint_green_selector"
        android:layout_marginTop="30dp"
        android:tooltipText="GREEN"
        app:layout_constraintTop_toTopOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.95"/>

    <ImageButton
        android:id="@+id/color_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paint_blue_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="BLUE"
        app:layout_constraintTop_toBottomOf="@id/color_red"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.2"/>

    <ImageButton
        android:id="@+id/color_navy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paint_navy_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="NAVY"
        app:layout_constraintTop_toBottomOf="@id/color_red"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ImageButton
        android:id="@+id/color_violet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/paint_violet_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="VIOLET"
        app:layout_constraintTop_toBottomOf="@id/color_red"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.8"/>

    <ImageButton
        android:id="@+id/percent_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="10"
        app:layout_constraintTop_toBottomOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0"/>

    <ImageButton
        android:id="@+id/percent_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="20"
        app:layout_constraintTop_toBottomOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.25"/>

    <ImageButton
        android:id="@+id/percent_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="30"
        app:layout_constraintTop_toBottomOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ImageButton
        android:id="@+id/percent_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="40"
        app:layout_constraintTop_toBottomOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.75"/>

    <ImageButton
        android:id="@+id/percent_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="50"
        app:layout_constraintTop_toBottomOf="@id/empty_page"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="1"/>

    <ImageButton
        android:id="@+id/percent_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="60"
        app:layout_constraintTop_toBottomOf="@id/percent_10"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0"/>

    <ImageButton
        android:id="@+id/percent_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="70"
        app:layout_constraintTop_toBottomOf="@id/percent_10"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.25"/>

    <ImageButton
        android:id="@+id/percent_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="80"
        app:layout_constraintTop_toBottomOf="@id/percent_10"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ImageButton
        android:id="@+id/percent_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="90"
        app:layout_constraintTop_toBottomOf="@id/percent_10"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="0.75"/>

    <ImageButton
        android:id="@+id/percent_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_circle_selector"
        android:layout_marginTop="20dp"
        android:tooltipText="100"
        app:layout_constraintTop_toBottomOf="@id/percent_10"
        app:layout_constraintStart_toStartOf="@id/empty_page"
        app:layout_constraintEnd_toEndOf="@id/empty_page"
        app:layout_constraintHorizontal_bias="1"/>

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/cancel_button_white_selector"
        android:contentDescription="@string/diary_cancel"
        app:layout_constraintTop_toBottomOf="@id/percent_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/empty_page" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_cancel"
        android:textColor="@color/deep"
        android:textSize="@dimen/diary_title_small"
        app:layout_constraintBottom_toBottomOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/cancel_button" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/save_button_selector"
        android:contentDescription="@string/diary_save"
        app:layout_constraintTop_toBottomOf="@id/percent_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/empty_page"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_save"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="@id/save_button"
        app:layout_constraintStart_toStartOf="@id/save_button"
        app:layout_constraintTop_toTopOf="@id/save_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_10"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_10"
        app:layout_constraintBottom_toBottomOf="@id/percent_10"
        app:layout_constraintStart_toStartOf="@id/percent_10"
        app:layout_constraintEnd_toEndOf="@id/percent_10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_20"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_20"
        app:layout_constraintBottom_toBottomOf="@id/percent_20"
        app:layout_constraintStart_toStartOf="@id/percent_20"
        app:layout_constraintEnd_toEndOf="@id/percent_20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_30"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_30"
        app:layout_constraintBottom_toBottomOf="@id/percent_30"
        app:layout_constraintStart_toStartOf="@id/percent_30"
        app:layout_constraintEnd_toEndOf="@id/percent_30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_40"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_40"
        app:layout_constraintBottom_toBottomOf="@id/percent_40"
        app:layout_constraintStart_toStartOf="@id/percent_40"
        app:layout_constraintEnd_toEndOf="@id/percent_40"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_50"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_50"
        app:layout_constraintBottom_toBottomOf="@id/percent_50"
        app:layout_constraintStart_toStartOf="@id/percent_50"
        app:layout_constraintEnd_toEndOf="@id/percent_50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_60"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_60"
        app:layout_constraintBottom_toBottomOf="@id/percent_60"
        app:layout_constraintStart_toStartOf="@id/percent_60"
        app:layout_constraintEnd_toEndOf="@id/percent_60"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_70"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_70"
        app:layout_constraintBottom_toBottomOf="@id/percent_70"
        app:layout_constraintStart_toStartOf="@id/percent_70"
        app:layout_constraintEnd_toEndOf="@id/percent_70"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_80"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_80"
        app:layout_constraintBottom_toBottomOf="@id/percent_80"
        app:layout_constraintStart_toStartOf="@id/percent_80"
        app:layout_constraintEnd_toEndOf="@id/percent_80"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_90"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_90"
        app:layout_constraintBottom_toBottomOf="@id/percent_90"
        app:layout_constraintStart_toStartOf="@id/percent_90"
        app:layout_constraintEnd_toEndOf="@id/percent_90"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bm_yeon_sung"
        android:text="@string/diary_color_percent_100"
        android:textSize="@dimen/diary_title_small"
        android:textColor="@color/deep"
        app:layout_constraintTop_toTopOf="@id/percent_100"
        app:layout_constraintBottom_toBottomOf="@id/percent_100"
        app:layout_constraintStart_toStartOf="@id/percent_100"
        app:layout_constraintEnd_toEndOf="@id/percent_100"/>

</androidx.constraintlayout.widget.ConstraintLayout>